--- a/tiffany/package.json
+++ b/tiffany/package.json
@@ -12,10 +12,12 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
+    "clsx": "^2.1.0",
     "next": "14.0.4",
     "npm": "^10.2.5",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.7"
   },
   "devDependencies": {
     "@types/node": "^20",
