--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "clsx": "^2.1.0",
     "next": "14.0.4",
+    "next-seo": "^6.4.0",
     "npm": "^10.2.5",
     "react": "^18",
     "react-dom": "^18",
